<resources>
    <string name="app_name">Student Login</string>
    <string name="header">Student Login</string>
    <string name="login_email">Email ID</string>
    <string name="login_password">Password</string>
    <string name="loginBtn">Login</string>
    <string name="signupClick">Don\'t have an account? Sign up here</string>
    <string name="footer">\@COPYRIGHT - 2024</string>
    <string name="signupEmail">Email ID</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup_password">Password</string>
    <string name="signup_username">Username</string>
    <string name="signup_submit">Submit</string>
    <string name="welcome">Welcome</string>
    <string name="login_link">Already have account? Login Here</string>
</resources>