<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_purple">


    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:text="@string/header"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/purple"
        android:gravity="center"/>
    <LinearLayout
        android:id="@+id/signupGroup"
        android:layout_height="wrap_content"
        android:layout_width="350dp"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:padding="30dp"
        android:background="@drawable/rounded_background"
        android:layout_below="@+id/header"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signupEmail"
            android:inputType="textEmailAddress"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_username"
            android:padding="10dp"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_submit"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/loginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupGroup"
        android:layout_centerHorizontal="true"
        android:text="@string/login_link"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:clickable="true"/>

    <TextView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:background="@color/purple"
        android:text="@string/footer"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center" />
</RelativeLayout>
